Last commit for PR

--- a/Corpus Analysis.ipynb
+++ b/Corpus Analysis.ipynb
@@ -2501,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2510,31 +2510,81 @@
      "text": [
       "The outbreak of 2019 novel coronavirus (2019-nCoV) pneumonia was reported in Wuhan, Hubei Province, China in December 2019 and has spread internationally.\n",
       "**********\n",
+      "The DET\n",
+      "outbreak NOUN\n",
       "outbreak\n",
+      "of ADP\n",
+      "2019 NUM\n",
+      "novel NOUN\n",
       "novel\n",
+      "coronavirus PROPN\n",
       "coronavirus\n",
+      "( PUNCT\n",
+      "2019-nCoV NUM\n",
+      ") PUNCT\n",
+      "pneumonia NOUN\n",
       "pneumonia\n",
+      "was AUX\n",
+      "reported VERB\n",
+      "in ADP\n",
+      "Wuhan PROPN\n",
       "Wuhan\n",
+      ", PUNCT\n",
+      "Hubei PROPN\n",
       "Hubei\n",
+      "Province PROPN\n",
       "Province\n",
+      ", PUNCT\n",
+      "China PROPN\n",
       "China\n",
+      "in ADP\n",
+      "December PROPN\n",
       "December\n",
+      "2019 NUM\n",
+      "and CCONJ\n",
+      "has AUX\n",
+      "spread VERB\n",
+      "internationally ADV\n",
+      ". PUNCT\n",
       "\n",
       "\n",
       "This article discusses how radiology departments can most effectively respond to this public health emergency.\n",
       "**********\n",
+      "This DET\n",
+      "article NOUN\n",
       "article\n",
+      "discusses VERB\n",
+      "how ADV\n",
+      "radiology NOUN\n",
       "radiology\n",
+      "departments NOUN\n",
       "departments\n",
+      "can VERB\n",
+      "most ADV\n",
+      "effectively ADV\n",
+      "respond VERB\n",
+      "to ADP\n",
+      "this DET\n",
+      "public ADJ\n",
+      "health NOUN\n",
       "health\n",
+      "emergency NOUN\n",
       "emergency\n",
+      ". PUNCT\n",
       "\n",
       "\n",
       "© 2020 The Association of University Radiologists\n",
       "**********\n",
+      "© PROPN\n",
       "©\n",
+      "2020 NUM\n",
+      "The DET\n",
+      "Association PROPN\n",
       "Association\n",
+      "of ADP\n",
+      "University PROPN\n",
       "University\n",
+      "Radiologists PROPN\n",
       "Radiologists\n",
       "\n",
       "\n"
@@ -2551,6 +2601,7 @@
     "        print(spacy_sentence)\n",
     "        print('*'*10)\n",
     "        for token in spacy_sentence:\n",
+    "            print(token,token.pos_)\n",
     "            if token.pos_ in candidate_pos and token.is_stop is False:\n",
     "                print(token)\n",
     "        print('\\n')\n",
