Last commit for merge

--- a/Corpus Analysis-checkpoint.ipynb
+++ b/Corpus Analysis-checkpoint.ipynb
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2527,6 +2527,102 @@
       "University - 1.0\n",
       "Radiologists - 1.0\n",
       "\n",
+      "\n",
+      "\n",
+      "Coronavirus disease is an emerging infection caused by a novel coronavirus that is moving rapidly. High resolution computed tomography (CT) allows objective evaluation of the lung lesions, thus enabling us to better understand the pathogenesis of the disease. With serial CT examinations, the occurrence, development, and prognosis of the disease can be better understood. The imaging can be sorted into four phases: early phase, progressive phase, severe phase, and dissipative phase. The CT appearance of each phase and temporal progression of the imaging findings are demonstrated. © 2020 The Association of University Radiologists\n",
+      "\n",
+      "\n",
+      "\n",
+      "CT - 2.016952801398337\n",
+      "disease - 1.7576780513468013\n",
+      "phase - 1.6996342377860234\n",
+      "lung - 1.148652898027898\n",
+      "evaluation - 1.0905051707551707\n",
+      "occurrence - 1.0068767616642615\n",
+      "development - 1.0068767616642615\n",
+      "© - 1.0\n",
+      "Association - 1.0\n",
+      "University - 1.0\n",
+      "Radiologists - 1.0\n",
+      "lesions - 0.9908949013949013\n",
+      "\n",
+      "\n",
+      "\n",
+      "Rationale and Objectives: To retrospectively analyze the chest imaging findings in patients with coronavirus disease 2019 (COVID-19) on thin-section CT. Materials and Methods: Fifty-three patients with confirmed COVID-19 infection underwent thin-section CT examination. Two chest radiologists independently evaluated the imaging in terms of distribution, ground-glass opacity (GGO), consolidation, air bronchogram, stripe, enlarged mediastinal lymph node, and pleural effusion. Results: Fourty-seven cases (88.7%) had findings of COVID-19 infection, and the other six (11.3%) were normal. Among the 47 cases, 78.7% involved both lungs, and 93.6% had peripheral infiltrates distributed along the subpleural area. All cases showed GGO, 59.6% of which were round and 40.4% patchy. Other imaging features included “crazy-paving pattern” (89.4%), consolidation (63.8%), and air bronchogram (76.6%). Air bronchograms were observed within GGO (61.7%) and consolidation (70.3%). Neither enlarged mediastinal lymph nodes nor pleural effusion were present. Thirty-three patients (62.3%) were followed an average interval of 6.2 ± 2.9 days. The lesions increased in 75.8% and resorbed in 24.2% of patients. Conclusion: COVID-19 showed the pulmonary lesions in patients infected with COVID-19 were predominantly distributed peripherally in the subpleural area. © 2020 The Association of University Radiologists\n",
+      "\n",
+      "\n",
+      "\n",
+      "% - 4.024416361262743\n",
+      "patients - 2.595249168177457\n",
+      "findings - 1.5435126027827266\n",
+      "consolidation - 1.5032160707754771\n",
+      "GGO - 1.4663964228693307\n",
+      "infection - 1.3360627720784102\n",
+      "COVID-19 - 1.2896015178668403\n",
+      "imaging - 1.2280499699194825\n",
+      "bronchogram - 1.2277864819131947\n",
+      "section - 1.2030177937691042\n",
+      "chest - 1.1995295830569521\n",
+      "air - 1.195887564164277\n",
+      "\n",
+      "\n",
+      "\n",
+      "Since the outbreak of the novel coronavirus disease COVID-19, caused by the SARS-CoV-2 virus, this disease has spread rapidly around the globe. Considering the potential threat of a pandemic, scientists and physicians have been racing to understand this ew virus and the pathophysiology of this disease to uncover possible treatment regimens and discover effective therapeutic agents and vaccines. To support the current research and development, CAS has produced a special report to provide an overview of published cientific information with an emphasis on patents in the CAS content collection. It highlights antiviral strategies involving small molecules and biologics targeting complex molecular interactions involved in coronavirus infection and replication. The drug-repurposing effort documented herein focuses primarily on agents known to be effective against other RNA viruses including SARS-CoV and MERS-CoV. The patent analysis of coronavirusrelated biologics includes therapeutic antibodies, cytokines, and nucleic acid-based therapies targeting virus gene expression as well as various types of vaccines. More than 500 patents disclose methodologies of these four biologics with the potential for treating and preventing coronavirus infections, which may be applicable to COVID-19. The information included in this report rovides a strong intellectual groundwork for the ongoing development of therapeutic agents and vaccines. © 2020 American Chemical Society.\n",
+      "\n",
+      "\n",
+      "\n",
+      "biologics - 2.2220473985890647\n",
+      "virus - 2.220677579365079\n",
+      "SARS - 1.8771471560846562\n",
+      "disease - 1.8754648644179892\n",
+      "coronavirus - 1.8365859374999998\n",
+      "agents - 1.7319053268298057\n",
+      "CAS - 1.4103419973544975\n",
+      "patents - 1.372324922839506\n",
+      "report - 1.3233280257936508\n",
+      "information - 1.2728676146384479\n",
+      "development - 1.2357675319664905\n",
+      "vaccines - 1.1294630483906527\n",
+      "\n",
+      "\n",
+      "\n",
+      "Background: Viral infectivity depends on interactions between components of the host cell plasma membrane and the virus envelope. Here we review strategies that could help stem the advance of the SARS-COV-2 epidemic. Methods and Results: We focus on the role of lipid structures, such as lipid rafts and cholesterol, involved in the process, mediated by endocytosis, by which viruses attach to and infect cells. Previous studies have shown that many naturally derived substances, such as cyclodextrin and sterols, could reduce the infectivity of many types of viruses, including the coronavirus family, through interference with lipid-dependent attachment to human host cells. Conclusions: Certain molecules prove able to reduce the infectivity of some coronaviruses, possibly by inhibiting viral lipid-dependent attachment to host cells. More research into these molecules and methods would be worthwhile as it could provide insights the mechanism of transmission of SARS-COV-2 and, into how they could become a basis for new antiviral strategies. © Mattioli 1885.\n",
+      "\n",
+      "\n",
+      "\n",
+      "lipid - 2.56428997228521\n",
+      "infectivity - 2.2016196113630633\n",
+      "host - 1.5294683783698666\n",
+      "SARS - 1.474229166666667\n",
+      "viruses - 1.4093202947845804\n",
+      "COV-2 - 1.3167430555555555\n",
+      "molecules - 1.277003119488536\n",
+      "plasma - 1.1185109126984125\n",
+      "cell - 1.0894692460317459\n",
+      "strategies - 1.088443287037037\n",
+      "mechanism - 1.081871527777778\n",
+      "sterols - 1.0684699735449734\n",
+      "\n",
+      "\n",
+      "\n",
+      "Since the first report of a cluster of pneumonia cases in Wuhan (China) at the end of 2019 due to a new airborne highly transmissible coronavirus known as SARS-CoV-2, large-scale spreading has rapidly become a global concern. Up to the end of February 2020, more than 85,000 cases had been confirmed worldwide, mostly in China, with more than 3,000 deaths. Figures are increasing on a daily basis, being unpredictable what will happen next. Table 1 summarizes figures for major outbreaks due to acute viral infections recorded during the past 50 years. © 2020, Publicaciones Permanyer. All rights reserved.\n",
+      "\n",
+      "\n",
+      "\n",
+      "cases - 1.5069830246913578\n",
+      "end - 1.4976041666666666\n",
+      "China - 1.445672839506173\n",
+      "CoV-2 - 1.109542438271605\n",
+      "SARS - 1.0892368827160492\n",
+      "figures - 1.0814583333333332\n",
+      "outbreaks - 1.0814583333333332\n",
+      "infections - 1.0814583333333332\n",
+      "Wuhan - 1.0580702160493827\n",
+      "coronavirus - 1.0465007716049382\n",
+      "Figures - 1.0\n",
+      "basis - 1.0\n",
+      "\n",
+      "\n",
       "\n"
      ]
     }
@@ -2543,7 +2639,9 @@
     "    \n",
     "    hybrid_analyzer.get_keywords(10)\n",
     "    print('\\n\\n')\n",
-    "    break"
+    "    \n",
+    "    if index == 5:\n",
+    "        break"
    ]
   }
  ],
