CSV file creation done

--- a/Corpus Analysis.ipynb
+++ b/Corpus Analysis.ipynb
@@ -2503,8 +2503,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2541,6 +2543,8 @@
     "candidate_pos=['NOUN', 'PROPN']\n",
     "hybrid_analyzer = HybridTheory()\n",
     "\n",
+    "keywords_abstract_list = []\n",
+    "\n",
     "for index,abstract in enumerate(abstract_ser):\n",
     "    \n",
     "    hybrid_analyzer.analyze(abstract, candidate_pos = ['NOUN', 'PROPN'], window_size=4, lower=False)\n",
@@ -2548,9 +2552,25 @@
     "    keywords_list = hybrid_analyzer.get_keywords(5)\n",
     "    print(keywords_list)\n",
     "    \n",
+    "    keywords_abstract_list.append({\n",
+    "        'abstract': abstract,\n",
+    "        'keywords': ','.join(keywords_list)\n",
+    "    })\n",
+    "    \n",
     "    print('\\n\\n')\n",
     "    if index == 5:\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(keywords_abstract_list)\n",
+    "\n",
+    "df.to_csv('keywords_extracted.csv')"
    ]
   }
  ],
