Extract author keywords

--- a/Corpus Analysis.ipynb
+++ b/Corpus Analysis.ipynb
@@ -2428,29 +2428,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-nCoV; COVID-19; PHEIC; radiology management; WHO\n",
+      "['Wuhan', 'pneumonia', 'Hubei', 'radiology', 'departments', 'health', 'coronavirus']\n"
+     ]
+    }
+   ],
    "source": [
     "candidate_pos=['NOUN', 'PROPN']\n",
     "hybrid_analyzer = HybridTheory()\n",
     "\n",
     "keywords_abstract_list = []\n",
     "\n",
-    "for abstract in abstract_ser:\n",
+    "for index, row in filtered_scopus_df.iterrows():\n",
     "    \n",
+    "    abstract = row['Abstract']\n",
     "    hybrid_analyzer.analyze(abstract, candidate_pos = ['NOUN', 'PROPN'], window_size=4, lower=False)\n",
     "    \n",
     "    keywords_list = hybrid_analyzer.get_keywords(5)\n",
     "    \n",
     "    keywords_abstract_list.append({\n",
     "        'abstract': abstract,\n",
-    "        'keywords': ','.join(keywords_list)\n",
+    "        'author_keywords': row['Author Keywords'],\n",
+    "        'textrank_keywords': ','.join(keywords_list)\n",
     "    })\n",
     "    \n",
+    "    print(row['Author Keywords'])\n",
     "    print(keywords_list)\n",
+    "    print('\\n\\n')\n",
     "    break"
    ]
   },
